--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 						<div class="menu-content pb-70 col-lg-8">
 							<div class="title text-center">
 								<h1 class="mb-10">Các khóa học nổi bật</h1>
-								<p>There is a moment in the life of any aspiring.</p>
+								<p>Các khóa học được nhiều học viên lựa chọn.</p>
 							</div>
 						</div>
 					</div>
@@ -375,40 +375,39 @@
 					<div class="row justify-content-between align-items-center">
 						<div class="col-lg-6 col-md-6 search-course-left">
 							<h1 class="text-white">
-								Get reduced fee <br>
-								during this Summer!
+								Nhận tư vấn từ trung tâm<br>
+								về khóa học của bạn!
 							</h1>
 							<p>
-								inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct
-								standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on
-								the job is beyond reproach.
+								Mỗi năm, có hàng nghìn lượt học viên đã tham dự các khóa học tiếng Anh, Pháp, Đức, Hàn, Nhật. Chúng tôi tự hào
+								là một trong những trung tâm ngoại ngữ được yêu thích, là địa chỉ tin cậy của các bạn SV Bách Khoa, Kinh tế, Xây
+								dựng, Ngân hàng... và nhiều người đi làm trên địa bàn Hà Nội.
 							</p>
 							<div class="row details-content">
 								<div class="col single-detials">
 									<span class="lnr lnr-graduation-hat"></span>
 									<a href="#">
-										<h4>Expert Instructors</h4>
+										<h4>Đội ngũ giáo viên</h4>
 									</a>
 									<p>
-										Usage of the Internet is becoming more common due to rapid advancement of technology
-										and power.
+										Đội ngũ giáo viên từ các trường đại học hàng đầu khu vực. Được đào tạo bài bản và có đầy đủ các chứng chỉ về
+										chuyên ngành cũng như giảng dạy.
 									</p>
 								</div>
 								<div class="col single-detials">
 									<span class="lnr lnr-license"></span>
 									<a href="#">
-										<h4>Certification</h4>
+										<h4>Chứng chỉ</h4>
 									</a>
 									<p>
-										Usage of the Internet is becoming more common due to rapid advancement of technology
-										and power.
+										Luyện thi các chứng chỉ nội bộ và chứng chỉ quốc tế.
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6 search-course-right section-gap">
 							<form class="form-wrap" action="#">
-								<h4 class="text-white pb-20 text-center mb-30">Search for Available Course</h4>
+								<h4 class="text-white pb-20 text-center mb-30">Đăng ký nhận tư vấn</h4>
 								<input type="text" class="form-control" name="name" placeholder="Họ và tên"
 									onfocus="this.placeholder = ''" onblur="this.placeholder = 'Họ và tên'">
 								<input type="phone" class="form-control" name="phone" placeholder="Số điện thoại"
@@ -424,7 +423,7 @@
 										<option value="4">Khác</option>
 									</select>
 								</div>
-								<button class="primary-btn text-uppercase">Submit</button>
+								<button class="primary-btn text-uppercase">Xác nhận</button>
 							</form>
 						</div>
 					</div>
@@ -438,8 +437,8 @@
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-70 col-lg-8">
 							<div class="title text-center">
-								<h1 class="mb-10">Upcoming Events of our Institute</h1>
-								<p>If you are a serious astronomy fanatic like a lot of us</p>
+								<h1 class="mb-10">Những sự kiện sắp diễn ra</h1>
+								<p>Hãy tham gia những sự kiện của trung tâm để có thể tìm kiếm được thông tin nhé!</p>
 							</div>
 						</div>
 					</div>
