--- a/about.html
+++ b/about.html
@@ -195,7 +195,7 @@
 								<div class="col single-detials">
 									<span class="lnr lnr-graduation-hat"></span>
 									<a href="#">
-										<h4>Expert Instructors</h4>
+										<h4>Đội ngũ giáo viên</h4>
 									</a>
 									<p>
 										Usage of the Internet is becoming more common due to rapid advancement of
@@ -205,7 +205,7 @@
 								<div class="col single-detials">
 									<span class="lnr lnr-license"></span>
 									<a href="#">
-										<h4>Certification</h4>
+										<h4>Chứng chỉ</h4>
 									</a>
 									<p>
 										Usage of the Internet is becoming more common due to rapid advancement of
@@ -216,7 +216,7 @@
 						</div>
 						<div class="col-lg-4 col-md-6 search-course-right section-gap">
 							<form class="form-wrap" action="#">
-								<h4 class="text-white pb-20 text-center mb-30">Search for Available Course</h4>
+								<h4 class="text-white pb-20 text-center mb-30">Đăng ký nhận tư vấn</h4>
 								<input type="text" class="form-control" name="name" placeholder="Your Name"
 									onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Name'">
 								<input type="phone" class="form-control" name="phone" placeholder="Your Phone Number"
